fix(header): fix jumpy nav header issue on chrome

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -17,8 +17,8 @@ nav.header-section {
 	position: fixed;
 	top: 0;
 	left: 0;
-	right: 0;
 	height: 60px;
+	width: 100%;
 	z-index: 9999;
 
 	.container {
